--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "public": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html2pdf": "^1.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
